removed some animations

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -68,16 +68,9 @@
             <div id="myStatsDiv" onClick="getStatistics()">
                 <div class="col-12 well" onClick="getStatistics()">
 
-                    <svg onClick="getStatistics()" xmlns="http://www.w3.org/2000/svg" class="equilizer" viewBox="0 0 128 128" id="equalizer">
-                        <g>
-                            <rect class="bar" transform="translate(0,0)" y="15"></rect>
-                            <rect class="bar" transform="translate(25,0)" y="15"></rect>
-                            <rect class="bar" transform="translate(50,0)" y="15"></rect>
-                            <rect class="bar" transform="translate(75,0)" y="15"></rect>
-                        </g>
-                    </svg>
                     
-                    <img onClick="getStatistics()" src="MyStatsButtonAnimated.png" id="myStatsButtonImage" data-toggle="modal" data-target="#statistics" type="button">
+                    
+                    <img onClick="getStatistics()" src="MyStatsButton.png" id="myStatsButtonImage" data-toggle="modal" data-target="#statistics" type="button">
 
                 </div>
             </div>
