added extra columns and rows to scorecard, linked to scorecard, linked back

--- a/public/scorecard.html
+++ b/public/scorecard.html
@@ -36,7 +36,7 @@
         <p>Front</p>
         <p id="distanceToFront"></p>
 
-        <button class="btn btn-primary" onclick="updateDistances(currentLocation)">Refresh Distances</button>
+        <button class="btn btn-primary" onClick="createCurrentLocation()">Refresh Distances</button>
    
     </div>
 
@@ -44,6 +44,7 @@
 
     
     <button class="btn btn-secondary" data-target="#statsModal" data-toggle="modal">Input Scores</button>
+    <a href="scorecardScratch.html"><button type="button" class="btn btn-primary">Scorecard</button></a>
 
 <!-- STATS MODAL -->
 
