--- a/public/scorecardScratch.html
+++ b/public/scorecardScratch.html
@@ -62,9 +62,23 @@
                         <th scope="col" id="numberHole7">7</th>
                         <th scope="col" id="numberHole8">8</th>
                         <th scope="col" id="numberHole9">9</th>
+                        <th scope="col" id="TotalsFrontNine">In</th>
                     </tr>
                 </thead>
                 <tbody>
+                    <tr id="frontNinePar">
+                        <th scope="row">Par</th>
+                        <td id="parHole1"></td>
+                        <td id="parHole2"></td>
+                        <td id="parHole3"></td>
+                        <td id="parHole4"></td>
+                        <td id="parHole5"></td>
+                        <td id="parHole6"></td>
+                        <td id="parHole7"></td>
+                        <td id="parHole8"></td>
+                        <td id="parHole9"></td>
+                        <td id="parHoleTotalFrontNine"></td>
+                    </tr>
                     <tr id="frontNineYardage">
                         <th scope="row">Yardage</th>
                         <td id="yardHole1"></td>
@@ -76,6 +90,7 @@
                         <td id="yardHole7"></td>
                         <td id="yardHole8"></td>
                         <td id="yardHole9"></td>
+                        <td id="yardHoleTotalFrontNine"></td>
                     </tr>
                     <tr id="frontNineHandicap">
                         <th scope="row">Handicap</th>
@@ -88,6 +103,7 @@
                         <td id="handicapHole7"></td>
                         <td id="handicapHole8"></td>
                         <td id="handicapHole9"></td>
+                        <td id="handicapTotalFrontNine"></td>
                     </tr>
                     <tr id="frontNineScore">
                         <th scope="row">Score</th>
@@ -100,7 +116,21 @@
                         <td id="scoreHole7"></td>
                         <td id="scoreHole8"></td>
                         <td id="scoreHole9"></td>
+                        <td id="scoreHoleTotalFrontNine"></td>
                     </tr>
+                    <tr id="frontNinePutts">
+                            <th scope="row">Putts</th>
+                            <td id="puttsHole1"></td>
+                            <td id="puttsHole2"></td>
+                            <td id="puttsHole3"></td>
+                            <td id="puttsHole4"></td>
+                            <td id="puttsHole5"></td>
+                            <td id="puttsHole6"></td>
+                            <td id="puttsHole7"></td>
+                            <td id="puttsHole8"></td>
+                            <td id="puttsHole9"></td>
+                            <td id="puttsTotalFrontNine"></td>
+                        </tr>
                     <tr id="frontNineFairwaysHit">
                         <th scope="row">Fairway</th>
                         <td id="fairwayHole1"></td>
@@ -112,6 +142,7 @@
                         <td id="fairwayHole7"></td>
                         <td id="fairwayHole8"></td>
                         <td id="fairwayHole9"></td>
+                        <td id="fairwayTotalFrontNine"></td>
                     </tr>
                     <tr id="frontNineGIR">
                         <th scope="row">GIR</th>
@@ -124,20 +155,8 @@
                         <td id="girHole7"></td>
                         <td id="girHole8"></td>
                         <td id="girHole9"></td>
+                        <td id="girTotalFrontNine"></td>
                     </tr>
-                    <tr id="frontNinePutts">
-                        <th scope="row">Putts</th>
-                        <td id="puttsHole1"></td>
-                        <td id="puttsHole2"></td>
-                        <td id="puttsHole3"></td>
-                        <td id="puttsHole4"></td>
-                        <td id="puttsHole5"></td>
-                        <td id="puttsHole6"></td>
-                        <td id="puttsHole7"></td>
-                        <td id="puttsHole8"></td>
-                        <td id="puttsHole9"></td>
-                    </tr>
-
                 </tbody>
             </table>
         </div>
@@ -155,9 +174,23 @@
                         <th scope="col" id="numberHole16">16</th>
                         <th scope="col" id="numberHole17">17</th>
                         <th scope="col" id="numberHole18">18</th>
+                        <th scope="col" id="totalsBackNine">Out</th>
                     </tr>
                 </thead>
                 <tbody>
+                        <tr id="backNinePar">
+                                <th scope="row">Par</th>
+                                <td id="parHole10"></td>
+                                <td id="parHole11"></td>
+                                <td id="parHole12"></td>
+                                <td id="parHole13"></td>
+                                <td id="parHole14"></td>
+                                <td id="parHole15"></td>
+                                <td id="parHole16"></td>
+                                <td id="parHole17"></td>
+                                <td id="parHole18"></td>
+                                <td id="parHoleTotalBackNine"></td>
+                            </tr>
                     <tr id="backNineYardage">
                         <th scope="row">Yardage</th>
                         <td id="yardHole10"></td>
@@ -169,6 +202,7 @@
                         <td id="yardHole16"></td>
                         <td id="yardHole17"></td>
                         <td id="yardHole18"></td>
+                        <td id="yardageTotalBackNine"></td>
                     </tr>
                     <tr id="backNineHandicap">
                         <th scope="row">Handicap</th>
@@ -181,6 +215,7 @@
                         <td id="handicapHole16"></td>
                         <td id="handicapHole17"></td>
                         <td id="handicapHole18"></td>
+                        <td id="handicapTotalBackNine"></td>
                     </tr>
                     <tr id="backNineScore">
                         <th scope="row">Score</th>
@@ -193,6 +228,7 @@
                         <td id="scoreHole16"></td>
                         <td id="scoreHole17"></td>
                         <td id="scoreHole18"></td>
+                        <td id="scoreTotalBackNine"></td>
                     </tr>
                     <tr id="backNineFairwaysHit">
                         <th scope="row">Fairway</th>
@@ -205,6 +241,7 @@
                         <td id="fairwayHole16"></td>
                         <td id="fairwayHole17"></td>
                         <td id="fairwayHole18"></td>
+                        <td id="fairwayTotalBackNine"></td>
                     </tr>
                     <tr id="backNineGIR">
                         <th scope="row">GIR</th>
@@ -217,6 +254,7 @@
                         <td id="girHole16"></td>
                         <td id="girHole17"></td>
                         <td id="girHole18"></td>
+                        <td id="girTotalBackNine"></td>
                     </tr>
                     <tr id="backNinePutts">
                         <th scope="row">Putts</th>
@@ -229,13 +267,14 @@
                         <td id="puttsHole16"></td>
                         <td id="puttsHole17"></td>
                         <td id="puttsHole18"></td>
+                        <td id="puttsTotalBackNine"></td>
                     </tr>
                 </tbody>
             </table>
         </div>
         <div id="scorecardButtonDiv" class="row">
             <div class="col-5" id="returnButtonDiv">
-                <img src="ReturnButton.png" id="returnButton">
+                <a href="scorecard.html"><img src="ReturnButton.png" id="returnButton"></a>
             </div>
             <div class="col-2"></div>
             <div class="col-5" id="endRoundButtonDiv">
@@ -256,3 +295,70 @@
 
 
 </body>
+
+<script>
+    let course = localStorage.getItem('currentCourse');
+    let currentTee = localStorage.getItem('currentTee');
+    let courseObject = JSON.parse(localStorage.getItem('courseObject'));
+    currentHole = 1;
+    console.log(courseObject)
+
+    buildThePage(courseObject);
+
+    function buildThePage(objects) {
+        console.log(objects);
+        console.log("inside build page")
+        buildYards(objects)
+        buildUser(objects)
+        buildHandicap(objects)
+    }
+
+    function buildYards(objects) {
+        console.log(objects + 'within build yerds')
+        console.log('objects below is within buildYards');
+        console.log(objects);
+        document.getElementById("yardHole1").textContent = objects.holes['one'].tees[currentTee][0]
+        document.getElementById("yardHole2").textContent = objects.holes['two'].tees[currentTee][0]
+        document.getElementById("yardHole3").textContent = objects.holes['three'].tees[currentTee][0]
+        document.getElementById("yardHole4").textContent = objects.holes['four'].tees[currentTee][0]
+        document.getElementById("yardHole5").textContent = objects.holes['five'].tees[currentTee][0]
+        document.getElementById("yardHole6").textContent = objects.holes['six'].tees[currentTee][0]
+        document.getElementById("yardHole7").textContent = objects.holes['seven'].tees[currentTee][0]
+        document.getElementById("yardHole8").textContent = objects.holes['eight'].tees[currentTee][0]
+        document.getElementById("yardHole9").textContent = objects.holes['nine'].tees[currentTee][0]
+        document.getElementById("yardHole10").textContent = objects.holes['ten'].tees[currentTee][0]
+        document.getElementById("yardHole11").textContent = objects.holes['eleven'].tees[currentTee][0]
+        document.getElementById("yardHole12").textContent = objects.holes['twelve'].tees[currentTee][0]
+        document.getElementById("yardHole13").textContent = objects.holes['thirteen'].tees[currentTee][0]
+        document.getElementById("yardHole14").textContent = objects.holes['fourteen'].tees[currentTee][0]
+        document.getElementById("yardHole15").textContent = objects.holes['fifteen'].tees[currentTee][0]
+        document.getElementById("yardHole16").textContent = objects.holes['sixteen'].tees[currentTee][0]
+        document.getElementById("yardHole17").textContent = objects.holes['seventeen'].tees[currentTee][0]
+        document.getElementById("yardHole18").textContent = objects.holes['eighteen'].tees[currentTee][0]
+    }
+
+    function buildUser(objects) {
+
+    }
+    function buildHandicap(objects) {
+        document.getElementById("handicapHole1").textContent = objects.holes['one'].handicap[currentTee]
+        document.getElementById("handicapHole2").textContent = objects.holes['two'].handicap[currentTee]
+        document.getElementById("handicapHole3").textContent = objects.holes['three'].handicap[currentTee]
+        document.getElementById("handicapHole4").textContent = objects.holes['four'].handicap[currentTee]
+        document.getElementById("handicapHole5").textContent = objects.holes['five'].handicap[currentTee]
+        document.getElementById("handicapHole6").textContent = objects.holes['six'].handicap[currentTee]
+        document.getElementById("handicapHole7").textContent = objects.holes['seven'].handicap[currentTee]
+        document.getElementById("handicapHole8").textContent = objects.holes['eight'].handicap[currentTee]
+        document.getElementById("handicapHole9").textContent = objects.holes['nine'].handicap[currentTee]
+        document.getElementById("handicapHole10").textContent = objects.holes['ten'].handicap[currentTee]
+        document.getElementById("handicapHole11").textContent = objects.holes['eleven'].handicap[currentTee]
+        document.getElementById("handicapHole12").textContent = objects.holes['twelve'].handicap[currentTee]
+        document.getElementById("handicapHole13").textContent = objects.holes['thirteen'].handicap[currentTee]
+        document.getElementById("handicapHole14").textContent = objects.holes['fourteen'].handicap[currentTee]
+        document.getElementById("handicapHole15").textContent = objects.holes['fifteen'].handicap[currentTee]
+        document.getElementById("handicapHole16").textContent = objects.holes['sixteen'].handicap[currentTee]
+        document.getElementById("handicapHole17").textContent = objects.holes['seventeen'].handicap[currentTee]
+        document.getElementById("handicapHole18").textContent = objects.holes['eighteen'].handicap[currentTee]
+
+    }
+</script>
